[package]
name = "ncnn-rs"
version = "0.1.0"
authors = ["tpoisonooo <khj.application@aliyun.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
ncnn-bind = { path="../ncnn-bind" }
# ncnn-bind = "0.1.0"
libc  = "0.2"