[package]
name = "ncnn-rs"
version = "0.1.1"
authors = ["tpoisonooo <khj.application@aliyun.com>"]
edition = "2021"
description = "ncnn Rust API"
license = "Apache-2.0"
license-file = "LICENSE.txt"
homepage = "https://github.com/tpoisonooo/rust-ncnn"
repository = "https://github.com/tpoisonooo/rust-ncnn"
keywords = ["binding", "ncnn", "API"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
# ncnn-bind = { path="../ncnn-bind" }
ncnn-bind = "0.1.1"
libc  = "0.2"