[package]
name = "ncnn-rs"
version = "0.1.2"
authors = ["tpoisonooo <khj.application@aliyun.com>"]
edition = "2021"
description = "ncnn Rust API"
license = "Apache-2.0"
homepage = "https://github.com/tpoisonooo/rust-ncnn"
repository = "https://github.com/tpoisonooo/rust-ncnn"
keywords = ["binding", "ncnn", "API"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
ncnn-bind = { path = "../ncnn-bind" }
libc  = "0.2"

[features]
# Explicitly use static linking
static = [ "ncnn-bind/static" ]
# Explicitly use dynamic linking
dynamic = [ "ncnn-bind/dynamic" ]
# Enable vulkan backend
vulkan = [ "ncnn-bind/vulkan" ]
